Necessary data is generated and Get request in postman works